--- a/SFML Game development/SFML Game development.vcxproj
+++ b/SFML Game development/SFML Game development.vcxproj
@@ -177,6 +177,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Property.cpp" />
     <ClCompile Include="SceneNode.cpp" />
+    <ClCompile Include="SettingState.cpp" />
     <ClCompile Include="SpriteNode.cpp" />
     <ClCompile Include="State.cpp" />
     <ClCompile Include="StateStack.cpp" />
@@ -224,6 +225,7 @@
     <ClInclude Include="RessourceHolder.h" />
     <ClInclude Include="RessourceLoader.h" />
     <ClInclude Include="SceneNode.h" />
+    <ClInclude Include="SettingState.h" />
     <ClInclude Include="SpriteNode.h" />
     <ClInclude Include="State.h" />
     <ClInclude Include="StateIdentifiers.h" />
